# lakeflow-connect-terraform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: full-refresh-pipeline.yml  full-refresh-tables.yml  terraform-deploy.yml  terraform-output-pipeline-ids.yml  terraform-release.yml
config/: lakeflow_dev.yml
config/examples/: README.md  mysql.yml  oracle.yml  oracle_qbc.yml  postgresql.yml  postgresql_qbc.yml  sqlserver.yml
config/examples/cdc_based_connector_database/: mysql.yml  oracle.yml  postgresql.yml  sqlserver.yml
config/examples/query_based_connector_foreign_catalog/: snowflake_qbc.yml
config/examples/query_based_connector_foreign_connection/: oracle_qbc.yml  postgresql_qbc.yml  sqlserver_qbc.yml
docs/: cicd-setup.md  installation.md  yaml-configuration.md
docs/assets/: README.md
docs/assets/diagrams/: .gitkeep
docs/assets/images/: .gitkeep
infra/: .terraform.lock.hcl  backend.local.tfvars.example  backend.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
infra/modules/gateway_pipeline/: main.tf
infra/modules/gateway_validation/: main.tf  versions.tf
infra/modules/ingestion_pipeline/: main.tf
infra/modules/job/: main.tf  versions.tf
infra/modules/qbc_pipeline/: main.tf  versions.tf
infra/modules/validate_catalog_and_schemas/: main.tf
tools/: pydantic_validator.py  trigger_full_refresh.py  validate_running_gateway.py  yaml_content_validator.py
