[tool.poetry]
name = "lakeflow-connect-terraform"
version = "0.1.0"
description = "Terraform IaC for Databricks Lakeflow Connect to SQL Server"
authors = ["Anil Menon"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
databricks-sdk = "^0.64.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[tool.poetry.scripts]
lfc-validate = "tools.validate:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api" 